REGRESSION (r273329): Logging of most errors like CSP and promise rejections fail logging to the system console https://bugs.webkit.org/show_bug.cgi?id=227080

Unreviewed, reverting r273329.


* dom/Document.cpp:
(WebCore::Document::didLogMessage):
* page/PageConsoleClient.cpp:
(WebCore::PageConsoleClient::addMessage):


Canonical link: https://commits.webkit.org/238876@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@278947 268f45cc-cd09-0410-ab3c-d52691b4dbfc